# BetaStar

./: README.md
src/sc2laddercore/: AgentsConfig.cpp
tests/: CMakeLists.txt
tests/BetaStar/: BetaStar.h  BetaStarCombat.cpp  BetaStarEventHandlers.cpp  BetaStarMain.cpp  BetaStarOnStep.cpp  BetaStarUtility.cpp  CMakeLists.txt  LadderInterface.h
